clusters/home/apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: default
  labels:
    name: vaultwarden
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted password manager
    gethomepage.dev/group: Apps/Services
    gethomepage.dev/icon: vaultwarden
    gethomepage.dev/name: Vaultwarden
    gethomepage.dev/weight: "2"
    glance/name: "Vaultwarden"
    glance/icon: "si:vaultwarden"
spec:
  rules:
  - host: vaultwarden.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vaultwarden
            port: 
              number: 80
